kijani-capstone/k8s/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kk-payments
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: staging.kijani.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kk-payments
                port:
                  name: http
